Set up navbar with styles, logo and responsive design

--- a/templates/home/index.html
+++ b/templates/home/index.html
@@ -1,7 +1,9 @@
 {% extends "base.html" %}
 
-{% block content %}
-<p>Hello!! to VINTAGE <i class="fas fa-car"></i></p>
+{% load static %}
 
+{% block content %}
+
+<p>whats happening</p>
 
 {% endblock %}
