--- a/templates/base.html
+++ b/templates/base.html
@@ -13,9 +13,6 @@
     <!-- Google fonts, bootstrap and fontawesome -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-        href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Space+Mono&family=Special+Elite&display=swap"
-        rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <script src="https://kit.fontawesome.com/4c85c0a16f.js" crossorigin="anonymous"></script>
@@ -26,12 +23,15 @@
 
 <body>
     <!-- Navbar -->
+    {% include 'components/_navbar.html' %}
+
     <!-- Message tags -->
 
-    <!-- Content -->
+    <!-- Section where content from other templates will stay -->
     {% block content %}
 
     {% endblock %}
+    
     <!-- Footer -->
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
