--- a/templates/home/index.html
+++ b/templates/home/index.html
@@ -3,7 +3,15 @@
 {% load static %}
 
 {% block content %}
+<div class="container">
+    <div class="row">
+        <div class="col text-center">
+            <h1>VINTAGE CARS</h1>
+            
+            <img src="{% static 'images/logo.png' %}" alt="Web Logo">
 
-<p>whats happening</p>
+        </div>
+    </div>
+</div>
 
 {% endblock %}
