--- a/templates/components/_footer.html
+++ b/templates/components/_footer.html
@@ -11,7 +11,7 @@
             <div class="col-md-4 footer-cont">
                 <ul class="list-inline text-center">
                     <li class="list-inline-item">
-                        <a href="#" class="footer-link">
+                        <a href="#" class="footer-link hvr-float-shadow">
                             <span class="fa-stack fa-lg">
                                 <i class="fas fa-circle fa-stack-2x"></i>
                                 <i class="fab fa-twitter fa-stack-1x fa-inverse"></i>
@@ -19,7 +19,7 @@
                         </a>
                     </li>
                     <li class="list-inline-item">
-                        <a href="#" class="footer-link">
+                        <a href="#" class="footer-link hvr-float-shadow">
                             <span class="fa-stack fa-lg">
                                 <i class="fas fa-circle fa-stack-2x"></i>
                                 <i class="fab fa-facebook-f fa-stack-1x fa-inverse"></i>
@@ -27,7 +27,7 @@
                         </a>
                     </li>
                     <li class="list-inline-item">
-                        <a href="#" class="footer-link">
+                        <a href="#" class="footer-link hvr-float-shadow">
                             <span class="fa-stack fa-lg">
                                 <i class="fas fa-circle fa-stack-2x"></i>
                                 <i class="fab fa-instagram fa-stack-1x fa-inverse"></i>
@@ -35,7 +35,7 @@
                         </a>
                     </li>
                     <li class="list-inline-item">
-                        <a href="#" class="footer-link">
+                        <a href="#" class="footer-link hvr-float-shadow">
                             <span class="fa-stack fa-lg">
                                 <i class="fas fa-circle fa-stack-2x"></i>
                                 <i class="fab fa-youtube fa-stack-1x fa-inverse"></i>
