--- a/templates/components/_footer.html
+++ b/templates/components/_footer.html
@@ -4,14 +4,14 @@
     <div class="container-fluid">
         <div class="row footer">
             <!-- Copyright -->
-            <div class="col-md-4 footer-cont">
+            <div class="col-md-4 footer-cont align-self-end">
                 <p class="text-white">Vintage Cars&copy; <span id="copyright"></span></p>
             </div>
             <!-- Social media site -->
             <div class="col-md-4 footer-cont">
                 <ul class="list-inline text-center">
                     <li class="list-inline-item">
-                        <a href="#" class="footer-link hvr-float-shadow">
+                        <a href="https://twitter.com/" target="_blank" class="footer-link hvr-float-shadow">
                             <span class="fa-stack fa-lg">
                                 <i class="fas fa-circle fa-stack-2x"></i>
                                 <i class="fab fa-twitter fa-stack-1x fa-inverse"></i>
@@ -19,7 +19,7 @@
                         </a>
                     </li>
                     <li class="list-inline-item">
-                        <a href="#" class="footer-link hvr-float-shadow">
+                        <a href="https://www.facebook.com/" target="_blank" class="footer-link hvr-float-shadow">
                             <span class="fa-stack fa-lg">
                                 <i class="fas fa-circle fa-stack-2x"></i>
                                 <i class="fab fa-facebook-f fa-stack-1x fa-inverse"></i>
@@ -27,7 +27,7 @@
                         </a>
                     </li>
                     <li class="list-inline-item">
-                        <a href="#" class="footer-link hvr-float-shadow">
+                        <a href="https://www.instagram.com/" target="_blank" class="footer-link hvr-float-shadow">
                             <span class="fa-stack fa-lg">
                                 <i class="fas fa-circle fa-stack-2x"></i>
                                 <i class="fab fa-instagram fa-stack-1x fa-inverse"></i>
@@ -35,7 +35,7 @@
                         </a>
                     </li>
                     <li class="list-inline-item">
-                        <a href="#" class="footer-link hvr-float-shadow">
+                        <a href="https://www.youtube.com/" target="_blank" class="footer-link hvr-float-shadow">
                             <span class="fa-stack fa-lg">
                                 <i class="fas fa-circle fa-stack-2x"></i>
                                 <i class="fab fa-youtube fa-stack-1x fa-inverse"></i>
@@ -45,7 +45,7 @@
                 </ul>
             </div>
             <!-- Disclaimer -->
-            <div class="col-md-4 footer-cont">
+            <div class="col-md-4 footer-cont align-self-end">
                 <p>For portfolio 4 project purposes only.</p>
             </div>
         </div>
