--- a/static/css/style.css
+++ b/static/css/style.css
@@ -18,7 +18,7 @@
 
 /* -----------  Global  -------------------------------------------------------------------------------------------------- */
 body { 
-    background: linear-gradient(178.6deg, rgb(22, 25, 25) 40.8%, rgb(45, 54, 60) 59.8%) no-repeat center center fixed;
+    background: linear-gradient(179.2deg, rgb(34, 34, 34) 0%, rgb(15, 18, 22) 29.7%, rgb(37, 47, 53) 63.4%, rgba(49, 65, 75, 0.8) 100.1%) no-repeat center center fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
@@ -117,7 +117,7 @@ h1 {
 }
 
 .footer-cont {
-    align-self: flex-end;
+    /* align-self: flex-end; */
     text-align: center;
 }
 .footer-link {
@@ -134,7 +134,7 @@ h1 {
 
 
 /* homepage */
-.carousel-caption {
+.transparent-bg {
     background-color: var(--vintage-trans-black);
 }
 
