--- a/templates/home/index.html
+++ b/templates/home/index.html
@@ -6,42 +6,42 @@
 <div class="container">
         <!-- carousel -->
     <div class="row">
-        <div class="col-8 offset-2">
-            <div id="carouselExampleCaptions" class="carousel slide carousel-fade" data-bs-ride="carousel">
+        <div class="col-lg-8 offset-lg-2 col-md-12">
+            <div id="vintageCarsCarousel" class="carousel slide carousel-fade" data-bs-ride="carousel">
                 <div class="carousel-indicators">
-                  <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-                  <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
-                  <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                  <button type="button" data-bs-target="#vintageCarsCarousel" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                  <button type="button" data-bs-target="#vintageCarsCarousel" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                  <button type="button" data-bs-target="#vintageCarsCarousel" data-bs-slide-to="2" aria-label="Slide 3"></button>
                 </div>
                 <div class="carousel-inner">
                   <div class="carousel-item active">
-                    <img src="{% static 'images/vc-red-ford-mustang.jpg' %}" class="d-block w-100 height-100" alt="...">
-                    <div class="carousel-caption d-none d-md-block">
+                    <img src="{% static 'images/vc-red-ford-mustang.jpg' %}" class="d-block w-100 height-100" alt="Ford Mustang">
+                    <div class="carousel-caption d-block transparent-bg">
                       <h5>First slide label</h5>
                       <p>Some representative placeholder content for the first slide.</p>
                     </div>
                   </div>
                   <div class="carousel-item">
-                    <img src="{% static 'images/vc-blue-sedan.jpg' %}" class="d-block w-100" alt="...">
-                    <div class="carousel-caption d-none d-md-block">
+                    <img src="{% static 'images/vc-blue-sedan.jpg' %}" class="d-block w-100" alt="Blue Sedan">
+                    <div class="carousel-caption d-block transparent-bg">
                       <h5>Second slide label</h5>
                       <p>Some representative placeholder content for the second slide.</p>
                     </div>
                   </div>
                   <div class="carousel-item">
-                    <img src="{% static 'images/vc-vintage-cars.jpg' %}" class="d-block w-100" alt="...">
-                    <div class="carousel-caption d-none d-md-block">
+                    <img src="{% static 'images/vc-vintage-cars.jpg' %}" class="d-block w-100" alt="Vintage cars">
+                    <div class="carousel-caption d-block transparent-bg">
                       <h5>Third slide label</h5>
                       <p>Some representative placeholder content for the third slide.</p>
                     </div>
                   </div>
                 </div>
-                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
-                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <button class="carousel-control-prev" type="button" data-bs-target="#vintageCarsCarousel" data-bs-slide="prev">
+                  <span class="carousel-control-prev-icon transparent-bg" aria-hidden="true"></span>
                   <span class="visually-hidden">Previous</span>
                 </button>
-                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
-                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <button class="carousel-control-next" type="button" data-bs-target="#vintageCarsCarousel" data-bs-slide="next">
+                  <span class="carousel-control-next-icon transparent-bg" aria-hidden="true"></span>
                   <span class="visually-hidden">Next</span>
                 </button>
               </div>
