--- a/static/css/style.css
+++ b/static/css/style.css
@@ -139,8 +139,18 @@ h1 {
 }
 
 .height-100 {
-    height: 100%;
+    max-height: 100%;
+    
 }
+
+/* .carousel-inner {
+    height: 470px;
+}
+
+.carousel-inner img {
+    height: 450px;
+    object-fit: contain;
+} */
 
 /* Responsive */
 
