Edit some styles in carousel section of homepage

--- a/templates/home/index.html
+++ b/templates/home/index.html
@@ -20,7 +20,7 @@
                 </div>
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img src="{% static 'images/screenshots/sshot-logo-dark.png' %}" class="d-block w-100 height-100"
+                        <img src="{% static 'images/screenshots/sshot-logo-dark.png' %}" class="d-block w-100"
                             alt="Logo">
                         <div class="carousel-caption d-block transparent-bg">
                             <h5>First slide label</h5>
@@ -28,7 +28,7 @@
                         </div>
                     </div>
                     <div class="carousel-item">
-                        <img src="{% static 'images/vc-red-ford-mustang.jpg' %}" class="d-block w-100 height-100"
+                        <img src="{% static 'images/vc-red-ford-mustang.jpg' %}" class="d-block w-100"
                             alt="Ford Mustang">
                         <div class="carousel-caption d-block transparent-bg">
                             <h5>First slide label</h5>
