--- a/static/css/style.css
+++ b/static/css/style.css
@@ -32,13 +32,15 @@ hr {
     margin: 0 0 10px 0
 }
 
-h1 {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
     font-family: var(--abril);
 }
 
-.uppercase {
-    text-transform: uppercase;
-}
 
 /* -----------  Text styles ---------------------------------------------------------------------------------- */
 .t-white {
@@ -55,6 +57,10 @@ h1 {
 
 .text-center {
     text-align: center;
+}
+
+.uppercase {
+    text-transform: uppercase;
 }
 
 /* -----------  Navbar  -------------------------------------------------------------------------------------------------- */
@@ -117,7 +123,6 @@ h1 {
 }
 
 .footer-cont {
-    /* align-self: flex-end; */
     text-align: center;
 }
 .footer-link {
@@ -133,24 +138,11 @@ h1 {
 }
 
 
-/* homepage */
+/* -----------  Home page  -------------------------------------------------------------------------------------------- */
+
 .transparent-bg {
     background-color: var(--vintage-trans-black);
 }
-
-.height-100 {
-    max-height: 100%;
-    
-}
-
-/* .carousel-inner {
-    height: 470px;
-}
-
-.carousel-inner img {
-    height: 450px;
-    object-fit: contain;
-} */
 
 /* Responsive */
 
