Add favicon for the webpage

--- a/templates/base.html
+++ b/templates/base.html
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vintage Cars</title>
     <!-- Favicon -->
-    <!-- <link rel="shortcut icon" href="{% static 'img/favicon.ico' %}" type="image/x-icon"> -->
+    <link rel="shortcut icon" href="{% static 'images/favicon.ico' %}" type="image/x-icon">
     <!-- Google fonts, bootstrap and fontawesome -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -19,7 +19,6 @@
         integrity="sha512-csw0Ma4oXCAgd/d4nTcpoEoz4nYvvnk21a8VA2h2dzhPAvjbUIK6V3si7/g/HehwdunqqW18RwCJKpD7rL67Xg=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <script src="https://kit.fontawesome.com/4c85c0a16f.js" crossorigin="anonymous"></script>
-
 
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
 </head>
