Add ordering class in the footer columns

--- a/templates/components/_footer.html
+++ b/templates/components/_footer.html
@@ -4,11 +4,11 @@
     <div class="container-fluid">
         <div class="row footer">
             <!-- Copyright -->
-            <div class="col-md-4 footer-cont align-self-end">
+            <div class="col-lg-4 col-md-12 footer-cont align-self-end order-lg-1">
                 <p class="text-white">Vintage Cars&copy; <span id="copyright"></span></p>
             </div>
             <!-- Social media site -->
-            <div class="col-md-4 footer-cont">
+            <div class="col-lg-4 col-md-12 footer-cont order-last order-lg-2">
                 <ul class="list-inline text-center">
                     <li class="list-inline-item">
                         <a href="https://twitter.com/" target="_blank" class="footer-link hvr-float-shadow">
@@ -45,7 +45,7 @@
                 </ul>
             </div>
             <!-- Disclaimer -->
-            <div class="col-md-4 footer-cont align-self-end">
+            <div class="col-lg-4 col-md-12 footer-cont align-self-end order-lg-2">
                 <p>For portfolio 4 project purposes only.</p>
             </div>
         </div>
