Create car.html and add view to render posts in the template

--- a/templates/components/_navbar.html
+++ b/templates/components/_navbar.html
@@ -16,7 +16,7 @@
                         <a class="nav-link {{ home }}" aria-current="page" href="{% url 'home' %}">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" aria-current="page" href="#">Cars</a>
+                        <a class="nav-link {{ cars }}" aria-current="page" href="{% url 'cars' %}">Cars</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" aria-current="page" href="#">Event</a>
