--- a/static/css/style.css
+++ b/static/css/style.css
@@ -144,6 +144,111 @@ h6 {
     background-color: var(--vintage-trans-black);
 }
 
+
+/* -----------  Cars  -------------------------------------------------------------------------------------------- */
+
+.contain {
+	height: 100%;
+}
+
+.contain-photo {
+	background-color: rgba(57, 62, 93, 0.7);
+	padding: 0;
+	overflow: hidden;
+	max-width: 410px;
+	margin: 15px;
+    position: relative;
+}
+
+.contain-photo article {
+	position: absolute;
+    padding: 10px;
+	bottom: 0;
+	z-index: 1;
+	-webkit-transition: all 0.5s ease;
+	-moz-transition: all 0.5s ease;
+	-o-transition: all 0.5s ease;
+	-ms-transition: all 0.5s ease;
+	transition: all 0.5s ease;
+}
+
+.contain-photo h2 {
+	color: #fff;
+	font-weight: 800;
+	font-size: 25px;
+	border-bottom: #fff solid 1px;
+}
+
+.contain-photo h4 {
+	font-weight: 300;
+	color: #fff;
+	font-size: 16px;
+}
+
+.contain-photo img {
+	width: 100%;
+    height: 100%;
+	top: 0;
+	left: 0;
+	opacity: 0.4;
+	-webkit-transition: all 4s ease;
+	-moz-transition: all 4s ease;
+	-o-transition: all 4s ease;
+	-ms-transition: all 4s ease;
+	transition: all 4s ease;
+}
+
+.view-more {
+	background-color: var(--vintage-brown);
+	position: absolute;
+	/* width: 100%; */
+	/* height: 50px; */
+    font-size: 18px;
+	bottom: 0;
+	z-index: 1;
+	opacity: 0;
+	transform: translate(0px, 70px);
+	-webkit-transform: translate(0px, 70px);
+	-moz-transform: translate(0px, 70px);
+	-o-transform: translate(0px, 70px);
+	-ms-transform: translate(0px, 70px);
+	-webkit-transition: all 0.2s ease-in-out;
+	-moz-transition: all 0.2s ease-in-out;
+	-o-transition: all 0.2s ease-in-out;
+	-ms-transition: all 0.2s ease-in-out;
+	transition: all 0.2s ease-in-out;
+}
+
+
+/*hovers*/
+.view-more:hover {
+    border: none;
+    background-color: var(--vintage-drk-brown);
+}
+
+.contain-photo:hover img {
+	opacity: 0.1;
+	transform: scale(1.5);
+}
+
+.contain-photo:hover article {
+	transform: translate(2px, -69px);
+	-webkit-transform: translate(2px, -69px);
+	-moz-transform: translate(2px, -69px);
+	-o-transform: translate(2px, -69px);
+	-ms-transform: translate(2px, -69px);
+}
+
+.contain-photo:hover .view-more {
+	transform: translate(0px, -9px);
+	-webkit-transform: translate(0px, -9px);
+	-moz-transform: translate(0px, -9px);
+	-o-transform: translate(0px, -9px);
+	-ms-transform: translate(0px, -9px);
+	opacity: 1;
+}
+
+
 /* Responsive */
 
 @media (max-width: 991px) {
