--- a/static/css/style.css
+++ b/static/css/style.css
@@ -51,6 +51,7 @@ h6 {
     color: var(--vintage-drk-brown)
 }
 
+/* =========delete thist!!!!!!!!!!!!===== */
 .t-red {
     color: red;
 }
@@ -190,7 +191,7 @@ h6 {
     height: 100%;
 	top: 0;
 	left: 0;
-	opacity: 0.4;
+	opacity: 0.5;
 	-webkit-transition: all 4s ease;
 	-moz-transition: all 4s ease;
 	-o-transition: all 4s ease;
@@ -199,7 +200,6 @@ h6 {
 }
 
 .view-more {
-	background-color: var(--vintage-brown);
 	position: absolute;
 	/* width: 100%; */
 	/* height: 50px; */
@@ -219,9 +219,12 @@ h6 {
 	transition: all 0.2s ease-in-out;
 }
 
+.view-more button {
+	background-color: var(--vintage-brown);
+}
 
 /*hovers*/
-.view-more:hover {
+.view-more button:hover {
     border: none;
     background-color: var(--vintage-drk-brown);
 }
@@ -248,6 +251,15 @@ h6 {
 	opacity: 1;
 }
 
+
+/* car details */
+
+.main-text {
+    position: absolute;
+    bottom: 0;
+    z-index: 1;
+    background-color: var(--vintage-trans-black);
+}
 
 /* Responsive */
 
