--- a/templates/base.html
+++ b/templates/base.html
@@ -7,7 +7,6 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vintage Cars</title>
     <!-- Favicon -->
     <link rel="shortcut icon" href="{% static 'images/favicon.ico' %}" type="image/x-icon">
     <!-- Google fonts, bootstrap and fontawesome -->
@@ -21,6 +20,10 @@
     <script src="https://kit.fontawesome.com/4c85c0a16f.js" crossorigin="anonymous"></script>
 
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
+
+    <title>
+        {% block title %} Vintage Cars {% endblock %}
+    </title>
 </head>
 
 <body>
