--- a/templates/car-detail.html
+++ b/templates/car-detail.html
@@ -1,28 +1,30 @@
 {% extends 'base.html' %}
-
+{% block title %} {{ post_car.car_model_title }} Post {% endblock %}
 {% load static %}
 
 {% block content %}
 <header class="masthead">
-    <div class="container-fluid px-4 px-lg-5 mt-3">
-        <div class="row gx-4 gx-lg-5 justify-content-center">
-            <div class="col-md-10 col-lg-8 col-xl-7 position-relative">
-                
-                <div class="post-heading main-text px-3">
-                    <h1>{{ post_car.car_model_title }}</h1>
-                    <h2 class="subheading">({{ post_car.year_manufactured }})</h2>
-                    <span class="meta">
-                        Posted by
-                        <a href="#!">{{ post_car.author }}</a>
-                        {{ post_car.date_created }}
-                    </span>
-                </div>
-                <div class="masthead-image w-100">
-                    {% if "placeholder" in post_car.car_image.url %}
-                    <img src="{% static 'images/screenshots/sshot-logo-dark.png' %}" alt="Default image">
-                    {% else %}
-                    <img src="{{ post_car.car_image.url }}" alt="Car image" width="100%">
-                    {% endif %}
+    <div class="container-fluid mt-3">
+        <div class="row justify-content-center">
+            <div class="col position-relative">
+                <div class="row">
+                    <div class="col post-heading main-text">
+                        <h1 class="px-4">{{ post_car.car_model_title }}</h1>
+                        <h2 class="subheading px-4">({{ post_car.year_manufactured }})</h2>
+                        <span class="meta px-4">
+                            Posted by
+                            <a href="#!">{{ post_car.author }}</a>
+                            {{ post_car.date_created }}
+                        </span>
+                    </div>
+                    <div class="masthead-image w-100">
+                        {% if "placeholder" in post_car.car_image.url %}
+                        <img src="{% static 'images/screenshots/sshot-logo-dark.png' %}" alt="Default image">
+                        {% else %}
+                        <img src="{{ post_car.car_image.url }}" alt="Car image" width="100%">
+                        {% endif %}
+                    </div>
+
                 </div>
 
             </div>
@@ -32,8 +34,8 @@
 <!-- Post Content-->
 <article class="mb-4 mt-4">
     <div class="container px-4 px-lg-5">
-        <div class="row gx-4 gx-lg-5 justify-content-center">
-            <div class="col-md-10 col-lg-8 col-xl-7">
+        <div class="row justify-content-center">
+            <div class="col-md-10 col-xl-7">
                 <p>{{ post_car.content | safe }}</p>
                 
             </div>
