--- a/templates/components/_navbar.html
+++ b/templates/components/_navbar.html
@@ -12,20 +12,20 @@
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
             <div class="mx-auto mt-3">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0 uppercase">
-                    <li class="nav-item">
-                        <a class="nav-link {{ home }}" aria-current="page" href="{% url 'home' %}">Home</a>
+                    <li class="nav-item mx-2">
+                        <a class="nav-link {{ home }}" href="{% url 'home' %}">Home</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link {{ cars }}" aria-current="page" href="{% url 'cars' %}">Cars</a>
+                    <li class="nav-item mx-2">
+                        <a class="nav-link {{ cars }}" href="{% url 'cars' %}">Cars</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" aria-current="page" href="#">Event</a>
+                    <li class="nav-item mx-2">
+                        <a class="nav-link" href="#">Event</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" aria-current="page" href="#">Log In</a>
+                    <li class="nav-item mx-2">
+                        <a class="nav-link" href="#">Log In</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" aria-current="page" href="#">Contact Us</a>
+                    <li class="nav-item mx-2">
+                        <a class="nav-link" href="#">Contact Us</a>
                     </li>
                 </ul>
             </div>
