--- a/templates/components/_navbar.html
+++ b/templates/components/_navbar.html
@@ -12,19 +12,19 @@
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
             <div class="mx-auto mt-3">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0 uppercase">
-                    <li class="nav-item mx-2">
+                    <li class="nav-item mx-1">
                         <a class="nav-link {{ home }}" href="{% url 'home' %}">Home</a>
                     </li>
-                    <li class="nav-item mx-2">
+                    <li class="nav-item mx-auto">
                         <a class="nav-link {{ cars }}" href="{% url 'cars' %}">Cars</a>
                     </li>
-                    <li class="nav-item mx-2">
+                    <li class="nav-item mx-auto">
                         <a class="nav-link" href="#">Event</a>
                     </li>
-                    <li class="nav-item mx-2">
+                    <li class="nav-item mx-auto">
                         <a class="nav-link" href="#">Log In</a>
                     </li>
-                    <li class="nav-item mx-2">
+                    <li class="nav-item mx-auto">
                         <a class="nav-link" href="#">Contact Us</a>
                     </li>
                 </ul>
