--- a/templates/home/index.html
+++ b/templates/home/index.html
@@ -6,7 +6,7 @@
 <div class="container">
     <!-- carousel -->
     <div class="row">
-        <div class="col-lg-8 offset-lg-2 col-md-12">
+        <div class="col-md-10 offset-md col-md-12">
             <div id="vintageCarsCarousel" class="carousel slide carousel-fade" data-bs-ride="carousel">
                 <div class="carousel-indicators">
                     <button type="button" data-bs-target="#vintageCarsCarousel" data-bs-slide-to="0" class="active"
