Create profile template, views and authentication codes when user logs in

--- a/templates/components/_navbar.html
+++ b/templates/components/_navbar.html
@@ -22,7 +22,7 @@
                         <a class="nav-link" href="#">Event</a>
                     </li>
                     <li class="nav-item mx-auto">
-                        <a class="nav-link" href="#">Log In</a>
+                        <a class="nav-link {{ user_profile }}" href="{% url 'user_profile' %}">Profile</a>
                     </li>
                     <li class="nav-item mx-auto">
                         <a class="nav-link" href="#">Contact Us</a>
