--- a/static/css/style.css
+++ b/static/css/style.css
@@ -25,7 +25,10 @@ body {
     background-size: cover;
     
     color: var(--vintage-white);
-    font-family: var(--space-mono)
+    font-family: var(--space-mono);
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
 }
 
 hr {
@@ -41,6 +44,9 @@ h6 {
     font-family: var(--abril);
 }
 
+footer {
+    margin-top: auto;
+}
 
 /* -----------  Text styles ---------------------------------------------------------------------------------- */
 .t-white {
@@ -147,7 +153,7 @@ h6 {
 
 
 /* -----------  Cars  -------------------------------------------------------------------------------------------- */
-
+/* almost all "cars" style is from: https://codepen.io/francisco-kataldo/pen/LBBryV */
 .contain {
 	height: 100%;
 }
@@ -201,8 +207,6 @@ h6 {
 
 .view-more {
 	position: absolute;
-	/* width: 100%; */
-	/* height: 50px; */
     font-size: 18px;
 	bottom: 0;
 	z-index: 1;
@@ -251,17 +255,78 @@ h6 {
 	opacity: 1;
 }
 
-
 /* car details */
 .masthead {
     overflow: hidden;
 }
+
 .main-text {
     position: absolute;
     bottom: 0;
     z-index: 1;
     background-color: var(--vintage-trans-black);
     max-width: 100%;
+}
+
+/* profile sign up */
+.btn {
+    border-radius: 50px;
+}
+
+.vintage-btn {
+    color: var(--vintage-white);
+    background-color: var(--vintage-drk-brown);
+    width: 200px;
+}
+
+.vintage-btn:hover {
+    background-color: var(--vintage-drk-brown);
+}
+
+.hvr-ripple-out:before{
+    border: var(--vintage-drk-brown) solid 6px;
+    border-radius: 50px;
+}
+
+.contain-form {
+    background-color: rgba(184, 171, 158, 0.45);
+    border-radius: 5px;
+}
+
+.reg-link {
+    background-color: var(--vintage-brown);
+    border-radius: 3px;
+    padding: 5px;
+}
+
+.reg-link:hover {
+    color: var(--vintage-white);
+    background-color: var(--vintage-red);
+}
+
+.vintage-profile {
+    background-color: var(--vintage-brown);
+    padding: 18px 30px;
+    border-radius: 0 15px 0 15px;
+}
+
+.profile-icon {
+    font-size: 40px;
+}
+
+.prof-link:hover {
+    color: var(--vintage-white);
+    border: var(--vintage-white) 1px solid;
+    border-radius: 20px;
+}
+
+.modal {
+    color: black;
+}
+
+.profile-bar {
+    text-transform: capitalize;
+    font-family: var(--elite);
 }
 
 /* Responsive */
