--- a/static/css/style.css
+++ b/static/css/style.css
@@ -18,6 +18,8 @@
 
 /* -----------  Global  -------------------------------------------------------------------------------------------------- */
 body { 
+    margin: 0;
+    padding: 0;
     background: linear-gradient(179.2deg, rgb(34, 34, 34) 0%, rgb(15, 18, 22) 29.7%, rgb(37, 47, 53) 63.4%, rgba(49, 65, 75, 0.8) 100.1%) no-repeat center center fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
@@ -206,9 +208,12 @@ footer {
 }
 
 .view-more {
+    padding: 10px;
+    background-color: var(--vintage-brown);
+    width: 100%;
 	position: absolute;
     font-size: 18px;
-	bottom: 0;
+	bottom: -10px;
 	z-index: 1;
 	opacity: 0;
 	transform: translate(0px, 70px);
@@ -223,8 +228,10 @@ footer {
 	transition: all 0.2s ease-in-out;
 }
 
-.view-more button {
+.view-more a {
 	background-color: var(--vintage-brown);
+    color: var(--vintage-white);
+    padding: 10px;
 }
 
 /*hovers*/
