--- a/templates/cars/cars.html
+++ b/templates/cars/cars.html
@@ -18,7 +18,6 @@
 					<div class="col-lg-4 col-md-12">
 						<div class="view-more text-white ">
 							<a href="{% url 'car_detail' post.id %}"><i class="far fa-eye px-3"></i></a>
-							<!-- <button class="btn ms-3"><i class="far fa-eye px-3"></i></button> -->
 							<i class="fas fa-heart"></i> {{ post.number_of_likes }}
 							<span class="col-1">
 								<i class="far fa-comments"></i>
@@ -35,16 +34,45 @@
 					</div>
 				</div>
 
-				{% if "placeholder" in post.car_image %}
+				{% if "placeholder" in post.car_image.url %}
 				<img src="{% static 'images/screenshots/sshot-logo-dark.png' %}" alt="Default image">
 				{% else %}
 				<img src="{{ post.car_image.url }}" alt="Car Image">
 				{% endif %}
 			</div>
+
 			{% endfor %}
 
-			<!-- Pagination -->
-			{% if post.has_other_pages %}
+			
+		</div>
+		<div class="row">
+			<div class="col">
+
+				<!-- Pagination -->
+					<nav aria-label="Page navigation">
+						<ul class="pagination justify-content-center">
+							{% if post_car.has_previous %}
+							<li><a href="?page={{ post_car.previous_page_number }}" class="page-link">&laquo; PREV</a></li>
+							{% endif %}
+							<span class="current">
+								Page {{ post_car.number }} of {{ post_car.paginator.num_pages }}
+							</span>
+							{% if post_car.has_next %}
+							<li><a href="?page={{ post_car.next_page_number }}" class="page-link">&raquo; NEXT</a></li>
+							{% endif %}
+						</ul>
+					</nav>
+			</div>
+		</div>
+		
+	</div>
+</div>
+
+
+{% endblock %}
+
+<!--
+	{% if post.has_other_pages %}
 			<ul class="pagination">
 				{% if post.has_previous %}
 				<li><a href="?page={{post.previous_page_number}}">&laquo;</a></li>
@@ -65,10 +93,48 @@
 				<li class="disabled"><span>&raquo;</span></li>
 				{% endif %}
 			</ul>
+			{% endif %} 
+	
+	
+	
+	
+	
+	
+	
+	{% if post.has_other_pages %}
+			<ul class="pagination">
+				{% if post.has_previous %}
+				<li><a href="?page={{post.previous_page_number}}">&laquo;</a></li>
+				{% else %}
+				<li class="disabled"><span>&laquo;</span></li>
+				{% endif %}
+
+				{% for i in post.paginator.page_range %}
+				{% if post.number == i %}
+				<li class="active"><span>{{ i }} <span class="sr-only">(current)</span></span></li>
+				{% else %}
+				<li><a href="?page={{ i }}">{{ i }}</a></li>
+				{% endif %}
+				{% endfor %}
+				{% if post.has_next %}
+				<li><a href="?page{{ post.next_page_number }}">&raquo;</a></li>
+				{% else %}
+				<li class="disabled"><span>&raquo;</span></li>
+				{% endif %}
+			</ul>
+			{% endif %} 
+		
+		
+		{% if is_paginated %}
+				<nav aria-label="Page navigation">
+					<ul class="pagination justify-content-center">
+						{% if page.obj.has_previous %}
+						{% endif %}
+						{% if page.obj.has_next %}
+						{% endif %}
+					</ul>
+				</nav>
 			{% endif %}
-		</div>
-	</div>
-</div>
-
-
-{% endblock %}
+		
+		
+		-->
