Edit display style of post list

--- a/templates/cars/cars.html
+++ b/templates/cars/cars.html
@@ -8,8 +8,8 @@
 
 <div class="container-fluid">
 	<h2 class="text-center">VIEW ALL VINTAGE CARS</h2>
-	<div class="container contain">
-		<div class="row">
+	<div class="container">
+		<div class="row contain">
 
 			<!-- Photo container -->
 			{% for post in post_car %}
