Edit style of content view on browser

--- a/templates/registration/user_profile.html
+++ b/templates/registration/user_profile.html
@@ -16,7 +16,7 @@
             <div class="col">
                 <h3 class="profile-bar mx-5">Hello {{ user.username }}</h3>
             </div>
-            <ul class="nav col-10 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
+            <ul class="nav col-10 col-lg-auto me-lg-auto mb-2 mb-md-0">
                 <li><a href="{% url 'add_car' %}" class="nav-link prof-link px-2 t-white mx-2">Add Post</a></li>
                 <button type="button" class="btn t-white mx-2" data-bs-toggle="modal" data-bs-target="#modal-logout">Log
                     Out</button>
@@ -63,7 +63,7 @@
 <!-- Post section of profile page -->
 <section>
     <div class="container">
-        <div class="row">
+        <div class="row justify-content-center">
 
             {% if user.is_authenticated %}
                 {%  for post in post_car  %}
@@ -97,46 +97,26 @@
                             <img src="{{ post.car_image.url }}" alt="Car Image">
                             {% endif %}
                         </div>
-                        <!-- Pagination -->
                     {% else %}
-                    <div class="row">
-                        <div class="col-md-8 offset-md-2 mt-5 pt-3">
-                            <p>No posts yet.</p>
-
-                        </div>
-                    </div>
+                        <p>
+                            {% if forloop.counter|divisibleby:6 %}
+                            <p class="text-center">No posts yet.</p>
+                            {% endif %}
+                        </p>
                     {% endif %}
                 {% endfor %}
-                <ul class="pagination">
-                    {% if post_car.has_previous %}
-                    <li><a href="?page={{ post_car.previous_page_number }}" class="page-link">&laquo;</a></li>
-                    {% endif %}
-
-                    {% for i in post_car.paginator.page_range %}
-                        {% if post_car.number == i %}
-                        <li class="active"><span>{{ i }} <span class="sr-only">(current)</span></span></li>
-                        {% else %}
-                        <li><a href="?page={{ i }}">{{ i }}</a></li>
-                        {% endif %}
-                    {% endfor %}
-                    {% if post_car.has_next %}
-                    <li><a href="?page={{ post_car.next_page_number }}" class="page-link">&raquo;</a></li>
-                    {% else %}
-                    <li class="disabled"><span>&raquo;</span></li>
-                    {% endif %}
-                </ul>
             {% else %}
             <div class="row">
-                <div class="col-md-8 offset-md-2 mt-5 pt-3">
+                <div class="col-md-8 offset-md-1 mt-5 pt-3 text-center">
                     <p>Please log in to view and edit your posts.</p>
 
                 </div>
             </div>
             {% endif %}
-
         </div>
     </div>
-
+    {% if is_paginated %}
+    {% endif %}
 </section>
 
 
