--- a/templates/cars/cars.html
+++ b/templates/cars/cars.html
@@ -16,8 +16,8 @@
 			<div class="col-lg-4 col-md-12 contain-photo">
 				<div class="row">
 					<div class="col-lg-4 col-md-12">
-						<div class="view-more text-white ">
-							<a href="{% url 'car_detail' post.id %}"><i class="far fa-eye px-3"></i></a>
+						<div class="view-more text-white hvr-icon-grow">
+							<a href="{% url 'car_detail' post.id %}"><i class="far fa-eye px-3 hvr-icon"></i></a>
 							<i class="fas fa-heart"></i> {{ post.number_of_likes }}
 							<span class="col-1">
 								<i class="far fa-comments"></i>
@@ -44,97 +44,56 @@
 			{% endfor %}
 
 			
-		</div>
-		<div class="row">
-			<div class="col">
-
-				<!-- Pagination -->
-					<nav aria-label="Page navigation">
-						<ul class="pagination justify-content-center">
-							{% if post_car.has_previous %}
-							<li><a href="?page={{ post_car.previous_page_number }}" class="page-link">&laquo; PREV</a></li>
-							{% endif %}
-							<span class="current">
-								Page {{ post_car.number }} of {{ post_car.paginator.num_pages }}
-							</span>
-							{% if post_car.has_next %}
-							<li><a href="?page={{ post_car.next_page_number }}" class="page-link">&raquo; NEXT</a></li>
-							{% endif %}
-						</ul>
-					</nav>
-			</div>
-		</div>
+		</div>	
+	</div>
+	<div>
+		<!-- pagination -->
+		<nav aria-label="Page navigation example">
+			<ul class="pagination justify-content-center">
+				{% if post_car.has_previous %}
+				<li class="page-item">
+					<a class="page-link" href="?page={{ post_car.previous_page_number }}">&laquo;</a>
+				</li>
+				{% else %}
+				<li class="page-item disabled">
+					<a class="page-link" href="#" tabindex="-1" aria-disabled="True">&laquo;</a>
+				</li>
+				{% endif %}
 		
+				{% if post_car.number|add:'-4' > 1 %}
+				<li class="page-item"><a class="page-link" href="?page={{ post_car.number|add:'-5' }}">&hellip;</a></li>
+				{% endif %}
+		
+				{% for i in post_car.paginator.page_range %}
+				{% if post_car.number == i %}
+				<li class="page-item active" aria-current="page">
+					<span class="page-link">
+						{{ i }}
+						<span class="sr-only">(current)</span>
+					</span>
+				</li>
+				{% elif i > post_car.number|add:'-5' and i < post_car.number|add:'5' %}
+				<li class="page-item"><a class="page-link" href="?page={{ i }}">{{ i }}</a></li>
+				{% endif %}
+				{% endfor %}
+		
+				{% if post_car.paginator.num_pages > post_car.number|add:'4' %}
+				<li class="page-item"><a class="page-link" href="?page={{ post_car.number|add:'5' }}">&hellip;</a></li>
+				{% endif %}
+		
+				{% if post_car.has_next %}
+				<li class="page-item">
+					<a class="page-link" href="?page={{ post_car.next_page_number }}">&raquo;</a>
+				</li>
+				{% else %}
+				<li class="page-item disabled">
+					<a class="page-link" href="#" tabindex="-1" aria-disabled="True">&raquo;</a>
+				</li>
+				{% endif %}
+			</ul>
+		</nav>
 	</div>
 </div>
 
 
 {% endblock %}
-
-<!--
-	{% if post.has_other_pages %}
-			<ul class="pagination">
-				{% if post.has_previous %}
-				<li><a href="?page={{post.previous_page_number}}">&laquo;</a></li>
-				{% else %}
-				<li class="disabled"><span>&laquo;</span></li>
-				{% endif %}
-
-				{% for i in post.paginator.page_range %}
-				{% if post.number == i %}
-				<li class="active"><span>{{ i }} <span class="sr-only">(current)</span></span></li>
-				{% else %}
-				<li><a href="?page={{ i }}">{{ i }}</a></li>
-				{% endif %}
-				{% endfor %}
-				{% if post.has_next %}
-				<li><a href="?page{{ post.next_page_number }}">&raquo;</a></li>
-				{% else %}
-				<li class="disabled"><span>&raquo;</span></li>
-				{% endif %}
-			</ul>
-			{% endif %} 
-	
-	
-	
-	
-	
-	
-	
-	{% if post.has_other_pages %}
-			<ul class="pagination">
-				{% if post.has_previous %}
-				<li><a href="?page={{post.previous_page_number}}">&laquo;</a></li>
-				{% else %}
-				<li class="disabled"><span>&laquo;</span></li>
-				{% endif %}
-
-				{% for i in post.paginator.page_range %}
-				{% if post.number == i %}
-				<li class="active"><span>{{ i }} <span class="sr-only">(current)</span></span></li>
-				{% else %}
-				<li><a href="?page={{ i }}">{{ i }}</a></li>
-				{% endif %}
-				{% endfor %}
-				{% if post.has_next %}
-				<li><a href="?page{{ post.next_page_number }}">&raquo;</a></li>
-				{% else %}
-				<li class="disabled"><span>&raquo;</span></li>
-				{% endif %}
-			</ul>
-			{% endif %} 
-		
-		
-		{% if is_paginated %}
-				<nav aria-label="Page navigation">
-					<ul class="pagination justify-content-center">
-						{% if page.obj.has_previous %}
-						{% endif %}
-						{% if page.obj.has_next %}
-						{% endif %}
-					</ul>
-				</nav>
-			{% endif %}
-		
-		
-		-->
